--- a/styles.css
+++ b/styles.css
@@ -2389,6 +2389,14 @@ figcaption {
     opacity: 0.6;
 }
 
+.rotate90 {
+    -webkit-transform: rotate(90deg);
+    -moz-transform: rotate(90deg);
+    -o-transform: rotate(90deg);
+    -ms-transform: rotate(90deg);
+    transform: rotate(90deg);
+}
+
 .container {
     width: 100%;
     max-width: 1140px;
